--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -845,7 +845,7 @@ config USB_G_PRINTER
 
 config USB_ANDROID
 	boolean "Android Gadget"
-	depends on SWITCH
+	//depends on SWITCH
 	help
 	  The Android gadget driver supports multiple USB functions.
 	  The functions can be configured via a board file and may be
