msm fb reverted, not booting anymore :(

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 2.6.35.10
-# Wed Feb  8 18:49:06 2012
+# Tue Feb 14 23:34:20 2012
 #
 CONFIG_ARM=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -316,7 +316,7 @@ CONFIG_LGE_YAFFS_AUTO_CHECKPOINT_PATCH=y
 # CONFIG_LGE_BRCM_H4_LPM_SUPPORT_PATCH is not set
 CONFIG_LGE_MMC_CLEANUP_PATCH=y
 CONFIG_LGE_DETECT_PIF_PATCH=y
-CONFIG_LGE_GRAM_REFRESH_PATCH=y
+# CONFIG_LGE_GRAM_REFRESH_PATCH is not set
 CONFIG_LGE_FACTORY_PATCH=y
 CONFIG_LGE_BLUE_ERROR_HANDLER=y
 # CONFIG_MSM_STACKED_MEMORY is not set
